<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Base.Theme.Sapp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">

        <TextView
            style="@style/Greetings"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/greetings" />

        <TextView
            android:id="@+id/user_name"
            style="@style/Greetings"
            android:text="@string/user_name"
            android:textColor="@color/magenta" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Button"
                android:text="@string/help" />

            <Space
                android:layout_width="@dimen/space"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Button"
                android:text="@string/wallet" />

            <Space
                android:layout_width="@dimen/space"
                android:layout_height="wrap_content" />

            <androidx.appcompat.widget.AppCompatButton
                style="@style/Button"

                android:text="@string/bills" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal"
            android:padding="@dimen/padding">

            <TextView
                android:id="@+id/safety_checkup_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="@dimen/padding"
                android:text="@string/security"
                android:textStyle="bold"
                app:drawableStartCompat="?android:attr/fingerprintAuthDrawable" />

            <TextView
                android:id="@+id/safety_checkup_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/results"
                android:textColor="@color/magenta"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:divider="@android:drawable/divider_horizontal_textfield"
            android:dividerPadding="@dimen/lv_divider"
            android:orientation="vertical"
            android:showDividers="none">

            <TextView
                style="@style/Options"
                android:text="@string/my_actions" />

            <TextView
                style="@style/Options"
                android:text="@string/support" />

            <TextView
                style="@style/Options"
                android:text="@string/gifts" />

            <TextView
                style="@style/Options"
                android:text="@string/promotions" />

            <TextView
                style="@style/Options"
                android:text="@string/bonus" />

            <TextView
                style="@style/Options"
                android:text="@string/info" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/padding"
                    android:gravity="center_vertical"
                    android:padding="@dimen/padding"
                    android:text="@string/saving_data"
                    app:drawableStartCompat="?attr/actionModeSelectAllDrawable" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:theme="@style/Base.Theme.Sapp"

                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>